[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "qe_density_reader"
authors = [{name = "Riccardo Bertossa", email = "rbertoss@sissa.it"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "h5py",
    "numpy",
    "k3d"
]

[project.urls]
Home = "https://github.com/rikigigi/qe_density"

[project.scripts]
write_qe_dipole = "qe_density_reader.reader:main"
